--- a/styles.css
+++ b/styles.css
@@ -15,3 +15,32 @@
 button{
     background-color: lemonchiffon;
 }
+.scoreboard{
+    background-color: #262626;
+    border: 4px solid whitesmoke;
+    border-radius: 15px;
+    padding: 30px 15px;
+    display: flex;
+    justify-content: space-around;align-items: center;
+    gap:50px
+}
+.playerScoreDiv{
+    background-color: #262626;
+    color: whitesmoke;
+}
+.playerScoreCnt{
+    background-color: #262626;
+}
+.playerScoreHeader{
+    background-color: #262626;
+}
+.cpuScoreDiv{
+    background-color: #262626;
+    color: whitesmoke;
+}
+.cpuScoreCnt{
+    background-color: #262626;
+}
+.cpuScoreHeader{
+    background-color: #262626;
+}
